src/snapshots/kk__tests__compiler__typecheck__progressive_unification_2.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f
  : \number => null
  = \(x: string) => null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/progressive_unification_2.kk:3:10
  │
3 │   = \(x: string) => null
  │          ^^^^^^ Wrong type annotation
  │
  = The expected type annotation is:

      number
